# hc_ai_mcp

./: .dockerignore  .gitignore  CLAUDE.md  DEBUGGING.md  DEBUGGING_REPORT.md  Dockerfile  LICENSE  README.md  __init__.py  config.yaml  env.example  logging_config.py  mcp.json  pyproject.toml  pytest.ini  render.yaml  requirements-deploy.txt  requirements.txt  server.py  server_card.json  smithery.yaml
.github/workflows/: ci.yml
agent/: __init__.py  config.py  graph.py  output_schemas.py  prompt_loader.py  prompts.yaml  query_classifier.py
agent/guardrails/: __init__.py  validators.py
agent/pii_masker/: __init__.py  aws_masker.py  factory.py  interface.py  local_masker.py
agent/tools/: __init__.py  argument_validators.py  calculators.py  context.py  dosage_validator.py  fda_tools.py  loinc_lookup.py  research_tools.py  retrieval.py  schemas.py  terminology_tools.py
config/: __init__.py  loader.py
db/: __init__.py  bm25_search.py  models.py  vector_store.py
embeddings/: __init__.py  chunker.py  embedder.py  ingest.py
reranker/: __init__.py  cache.py  cross_encoder.py  models.py
scripts/: health_check.py  sample_ingest.py  setup_db.sql
session/: __init__.py  models.py  store.py
tests/: conftest.py
tests/test_agent/: test_argument_validators.py  test_calculators.py  test_context.py  test_graph.py  test_guardrails.py  test_output_schemas.py  test_pii_masker.py  test_prompt_loader.py  test_query_classifier.py  test_schemas.py
tests/test_config/: test_loader.py
tests/test_db/: test_models.py
tests/test_embeddings/: test_embedder.py
tests/test_integration/: test_concurrent.py  test_mcp_server.py
tests/test_reranker/: test_cache.py  test_cross_encoder.py
tests/test_session/: test_in_memory_store.py  test_store.py
tests/test_tools/: test_utils.py
tools/: __init__.py  agent_tools.py  embeddings_tools.py  retrieval_tools.py  utils.py
