[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hc-ai-mcp"
version = "1.0.0"
description = "AI-powered MCP server for FHIR document search and conversation"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "rsanandres", url = "https://github.com/rsanandres"}]

dependencies = [
  "mcp>=1.0.0",
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0",
  "sqlalchemy>=2.0.0",
  "asyncpg>=0.29.0",
  "langchain-postgres>=0.0.1",
  "langchain-core>=0.1.0",
  "langchain-ollama>=0.1.0",
  "langchain-aws>=0.1.0",
  "langchain-openai>=0.1.0",
  "langchain-anthropic>=0.1.0",
  "langchain-text-splitters>=0.0.1",
  "langgraph>=0.2.0",
  "sentence-transformers>=2.2.0",
  "torch>=2.0.0",
  "nltk>=3.8",
  "numpy>=1.24.0",
  "scikit-learn>=1.3.0",
  "requests>=2.31.0",
  "boto3>=1.34.0"
]

[project.scripts]
hc-ai-mcp = "server:main"
