[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas_mcp"
version = "0.1.0"
description = "AI-powered MCP server for FHIR document search and conversation"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "rsanandres"}]
keywords = ["mcp", "fhir", "healthcare", "ai", "rag", "clinical", "embeddings", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Healthcare Industry",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
  "mcp>=1.0.0",
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0",
  "sqlalchemy>=2.0.0",
  "asyncpg>=0.29.0",
  "langchain-postgres>=0.0.1",
  "langchain-core>=0.1.0",
  "langchain-ollama>=0.1.0",
  "langchain-aws>=0.1.0",
  "langchain-openai>=0.1.0",
  "langchain-anthropic>=0.1.0",
  "langchain-text-splitters>=0.0.1",
  "langgraph>=0.2.0",
  "sentence-transformers>=2.2.0",
  "torch>=2.0.0",
  "nltk>=3.8",
  "numpy>=1.24.0",
  "scikit-learn>=1.3.0",
  "requests>=2.31.0",
  "httpx>=0.27.0",
  "boto3>=1.34.0",
  "guardrails-ai>=0.4.0",
  "pydeid",
]

[project.urls]
Homepage = "https://github.com/rsanandres/atlas_mcp"
Repository = "https://github.com/rsanandres/atlas_mcp"
Issues = "https://github.com/rsanandres/atlas_mcp/issues"

[project.scripts]
atlas_mcp = "server:main"

[tool.setuptools.packages.find]
include = [
  "agent*",
  "config*",
  "db*",
  "embeddings*",
  "reranker*",
  "session*",
  "tools*",
]
exclude = ["tests*"]

[tool.setuptools]
py-modules = ["server", "logging_config"]

